# max-emission-control

./: .gitignore  .gitmodules  ARCHITECTURE_FIX.md  BACKUP_FILE_INVENTORY.md  BUILD_SUCCESS.md  CHECKLIST.md  CMakeLists.txt  COMMIT_MESSAGES.txt  CONVERSION_TO_MAX_SDK.md  EC2_FIDELITY_ANALYSIS.md  PHASE_12_13_COMPLETE.md  PURE_MAX_SDK_COMPLETE.md  README.md  README_AND_BINARY_GUIDE_SUMMARY.md  TESTING_CHECKLIST.md  TODO.md  appunti-ec2.txt  lfo_modulatable_parameters.txt  max-sdk  my-min-devkit  test_engine  test_engine.cpp
decompile/: ec2_disassembly.txt
decompile/ec2~old.mxo/Contents/MacOS/: ec2~
decompile/spat5.spat~.mxo/Contents/: Info.plist
docs/: BINARY_DISTRIBUTION_GUIDE.md  COMPLETE_PARAMETER_LIST.md  EC2_HELP_REFERENCE.md  FUTURE_TODO.md  IMPLEMENTATION_SUMMARY.md  MAX_HELP_FILE_GUIDE.md  PHASE_12_13_REVIEW.md  PORTING_STRATEGY.md
package/: package-info.json
patchers/: ec2_GUI.maxpat  ec2_testpatch.maxpat
patchers/code/: validateString.js
source/ec2_tilde/: CMakeLists.txt  ec2_constants.h  ec2_engine.cpp  ec2_engine.h  ec2_envelope.cpp  ec2_envelope.h  ec2_filter.h  ec2_grain.cpp  ec2_grain.h  ec2_lfo.cpp  ec2_lfo.h  ec2_param_window.h  ec2_param_window.mm  ec2_scheduler.cpp  ec2_scheduler.h  ec2_spatial_allocator.cpp  ec2_spatial_allocator.h  ec2_tilde.cpp  ec2_utility.cpp  ec2_utility.h  ec2_version.h.in  ec2_voice_pool.cpp  ec2_voice_pool.h
